--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto X-Men - Semana do progamador contratado</title>
+    <title>Projeto X-Men - projeto1</title>
 <link rel="stylesheet" href="./src/css/reset.css">
 <link rel="stylesheet" href="./src/css/estilos.css">
 <link rel="stylesheet" href="./src/css/responsivo.css">
